# slam_research_club

./: CMakeLists.txt  README.md  example.md
cmake_practice/: .~lock.预备讲-Cmake_潘胜利20101026.pptx#  Cmake_潘胜利20101026.pptx  动态库与静态库.pptx  预备讲-Cmake_潘胜利20101026.pptx
pics/pro_2/: description.txt
pics/pro_3/: description2.txt
pics/pro_4/: description_pro4
pics/pro_5/: description_pro5.txt
pics/pro_6/: description.txt
project/src/hello_cv_1/: CMakeLists.txt
project/src/hello_cv_1/include/: hello_cv_1.h
project/src/hello_cv_1/src/: hello_cv_1.cpp  main.cpp
project/src/hello_cv_2_add_static_lib/: CMakeLists.txt
project/src/hello_cv_2_add_static_lib/install/lib/cmake/hello_cv_2_add_static_lib/: hello_cv_2_add_static_lib-config.cmake
project/src/hello_cv_3_add_shared_lib/: CMakeLists.txt
project/src/hello_cv_3_add_shared_lib/src/: hello_cv_1.cpp
project/src/hello_cv_4_target_link_inner_lib/: CMakeLists.txt
project/src/hello_cv_5_target_link_outer_lib/: CMakeLists.txt
project/src/hello_cv_6_add_catkin/.catkin_tools/profiles/default/: devel_collisions.txt
project/src/hello_cv_6_add_catkin/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
project/src/hello_cv_6_add_catkin/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
project/src/hello_cv_6_add_catkin/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
project/src/hello_cv_6_add_catkin/devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
project/src/hello_cv_6_add_catkin/devel/.private/example/: .catkin  local_setup.sh  setup.sh
project/src/hello_cv_6_add_catkin/devel/.private/example/lib/pkgconfig/: example.pc
project/src/hello_cv_6_add_catkin/devel/.private/example/share/example/cmake/: exampleConfig.cmake
project/src/hello_cv_6_add_catkin/devel/.private/hello_cv_2_add_static_lib/: .catkin  local_setup.sh  setup.sh
project/src/hello_cv_6_add_catkin/devel/.private/hello_cv_2_add_static_lib/lib/pkgconfig/: hello_cv_2_add_static_lib.pc
project/src/hello_cv_6_add_catkin/devel/.private/hello_cv_2_add_static_lib/share/hello_cv_2_add_static_lib/cmake/: hello_cv_2_add_static_libConfig.cmake
project/src/hello_cv_6_add_catkin/devel/.private/hello_cv_5_target_link_outer_lib/: .catkin  .rosinstall  local_setup.sh  setup.sh
project/src/hello_cv_6_add_catkin/devel/.private/hello_cv_5_target_link_outer_lib/lib/pkgconfig/: hello_cv_5_target_link_outer_lib.pc
project/src/hello_cv_6_add_catkin/devel/.private/hello_cv_5_target_link_outer_lib/share/hello_cv_5_target_link_outer_lib/cmake/: hello_cv_5_target_link_outer_libConfig.cmake
project/src/hello_cv_6_add_catkin/devel/lib/hello_cv_5_target_link_outer_lib/: hello_cv_5_target_link_outer_lib
project/src/hello_cv_6_add_catkin/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  example.pc  hello_cv_2_add_static_lib.pc  hello_cv_5_target_link_outer_lib.pc
project/src/hello_cv_6_add_catkin/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
project/src/hello_cv_6_add_catkin/devel/share/example/cmake/: exampleConfig-version.cmake  exampleConfig.cmake
project/src/hello_cv_6_add_catkin/devel/share/hello_cv_2_add_static_lib/cmake/: hello_cv_2_add_static_libConfig-version.cmake  hello_cv_2_add_static_libConfig.cmake
project/src/hello_cv_6_add_catkin/devel/share/hello_cv_5_target_link_outer_lib/cmake/: hello_cv_5_target_link_outer_libConfig-version.cmake  hello_cv_5_target_link_outer_libConfig.cmake
project/src/hello_cv_6_add_catkin/logs/hello_cv_5_target_link_outer_lib/: build.make.000.log.stderr
project/src/hello_cv_6_add_catkin/src/example/: CMakeLists.txt
project/src/hello_cv_6_add_catkin/src/hello_cv_2_add_static_lib/: CMakeLists.txt
project/src/hello_cv_6_add_catkin/src/hello_cv_2_add_static_lib/include/: hello_cv_1.h
project/src/hello_cv_6_add_catkin/src/hello_cv_5_target_link_outer_lib/: CMakeLists.txt  package.xml
project/src/hello_cv_6_add_catkin/src/hello_cv_5_target_link_outer_lib/src/: main.cpp
project/src/hello_cv_7_add_static_lib/: CMakeLists.txt
project/src/hello_cv_7_install_lib/: CMakeLists.txt
project/src/hello_cv_7_install_lib/cmake/: Findhello_cv_7_install_lib.cmake
project/src/hello_cv_7_install_lib/install/cmake/: Findhello_cv_7_install_lib.cmake
project/src/hello_cv_8_find_outer_lib/: CMakeLists.txt
