<?xml version="1.0"?>
<package format="2">
  <name>hello_cv_5_target_link_outer_lib</name>
  <version>0.0.0</version>
  <description>The hello_cv_5_target_link_outer_lib package</description>

  <maintainer email="henry_pan@todo.todo">henry_pan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>hello_cv_2_add_static_lib</depend>

  <export>

  </export>
</package>
